--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
     "@ionic-native/core": "~4.12.0",
     "@ionic-native/splash-screen": "~4.12.0",
     "@ionic-native/status-bar": "~4.12.0",
-    "@ionic/storage": "2.1.3",
+    "@ionic/storage": "^2.1.3",
     "browserslist": "^4.1.0",
+    "cordova-sqlite-storage": "^2.4.0",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "rxjs": "5.5.11",
@@ -35,5 +36,10 @@
     "@ionic/app-scripts": "3.2.0",
     "typescript": "~2.6.2"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-sqlite-storage": {}
+    }
+  }
 }
