removed proxy link, was causing issues when url changes

--- a/ionic.config.json
+++ b/ionic.config.json
@@ -3,11 +3,5 @@
   "integrations": {
     "cordova": {}
   },
-  "type": "ionic-angular",
-  "proxies": [
-    {
-      "path":"/games",
-      "proxyUrl": "https://api-endpoint.igdb.com/games"
-    }
-  ]
+  "type": "ionic-angular"
 }
