--- a/package.json
+++ b/package.json
@@ -21,11 +21,15 @@
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
     "@ionic-native/core": "~4.12.0",
+    "@ionic-native/in-app-browser": "^4.12.2",
     "@ionic-native/keyboard": "^4.12.1",
     "@ionic-native/splash-screen": "~4.12.0",
     "@ionic-native/status-bar": "~4.12.0",
+    "@ionic-native/youtube-video-player": "^4.12.2",
     "@ionic/storage": "^2.1.3",
     "browserslist": "^4.1.0",
+    "cordova-plugin-inappbrowser": "^3.0.0",
+    "cordova-plugin-youtube-video-player": "^1.0.6",
     "cordova-sqlite-storage": "^2.4.0",
     "ionic-angular": "3.9.2",
     "ionic-plugin-keyboard": "^2.2.1",
@@ -43,7 +47,9 @@
   "cordova": {
     "plugins": {
       "cordova-sqlite-storage": {},
-      "ionic-plugin-keyboard": {}
+      "ionic-plugin-keyboard": {},
+      "cordova-plugin-inappbrowser": {},
+      "cordova-plugin-youtube-video-player": {}
     }
   }
 }
