--- a/ionic.config.json
+++ b/ionic.config.json
@@ -3,5 +3,9 @@
   "integrations": {
     "cordova": {}
   },
-  "type": "ionic-angular"
+  "type": "ionic-angular",
+  "proxies": [{
+    "path": "/",
+    "proxyUrl": "https://api-endpoint.igdb.com"
+  }]
 }
