--- a/package.json
+++ b/package.json
@@ -28,7 +28,13 @@
     "@ionic-native/youtube-video-player": "^4.12.2",
     "@ionic/storage": "^2.1.3",
     "browserslist": "^4.1.0",
+    "cordova-android": "6.3.0",
+    "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-inappbrowser": "^3.0.0",
+    "cordova-plugin-ionic-keyboard": "^2.1.2",
+    "cordova-plugin-ionic-webview": "^2.1.0",
+    "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-whitelist": "^1.3.3",
     "cordova-plugin-youtube-video-player": "^1.0.6",
     "cordova-sqlite-storage": "^2.4.0",
     "ionic-angular": "3.9.2",
@@ -49,7 +55,15 @@
       "cordova-sqlite-storage": {},
       "ionic-plugin-keyboard": {},
       "cordova-plugin-inappbrowser": {},
-      "cordova-plugin-youtube-video-player": {}
-    }
+      "cordova-plugin-youtube-video-player": {},
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-ionic-keyboard": {}
+    },
+    "platforms": [
+      "android"
+    ]
   }
 }
